--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "konva": "^4.0.5",
+    "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-icon": "^2.1.1",
+    "vue-konva": "^2.0.8",
     "vue-material": "^1.0.0-beta-11"
   },
   "devDependencies": {
